syntax = "proto3";
package lumnetwork.beam;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "lumnetwork/beam/beam.proto";

option go_package = "github.com/lum-network/chain/x/beam/types";

// GenesisState defines the capability module's genesis state.
message GenesisState {
  cosmos.base.v1beta1.Coin module_account_balance = 1 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];

  repeated Beam beams = 2;
}
